kubernetes/network/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-lb
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "false"
spec:
  type: LoadBalancer
  selector:
    app: petclinic
  ports:
    - port: 80
      targetPort: 8080
      name: http
